# spanpaper

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  gen-test-assets.sh  release.sh  setup.sh
.github/workflows/: ci.yml
contrib/: PKGBUILD  PKGBUILD-bin  spanpaper-set-side.desktop  spanpaper-set-span.desktop  spanpaper-tray.desktop  spanpaper.desktop  spanpaper.service
docs/: tray-applet-plan.md  v0.4-plan.md
src/: cli.rs  config.rs  daemon.rs  ipc.rs  lib.rs  main.rs  media.rs  outputs.rs  state.rs  thumbnail.rs  workers.rs
