[package]
name = "spanpaper"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Ian McMurray <ian.mcmurray@gmail.com>"]
description = "True single-MP4 video wallpaper spanning across stacked monitors on Wayland (wlr-layer-shell)"
license = "MIT"
repository = "https://github.com/ianmcmurray/spanpaper"
readme = "README.md"
keywords = ["wayland", "wallpaper", "video", "layer-shell", "mpv"]
categories = ["command-line-utilities"]

[dependencies]
clap          = { version = "4.5", features = ["derive"] }
serde         = { version = "1",   features = ["derive"] }
toml          = "0.8"
dirs          = "5"
anyhow        = "1"
thiserror     = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-client    = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
nix           = { version = "0.27", features = ["signal", "process", "fs", "user"] }
shellexpand   = "3"
which         = "6"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
opt-level     = 3
panic         = "abort"
