[package]
name = "spanpaper"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
authors = ["Ian McMurray <ian.mcmurray@gmail.com>"]
description = "True single-MP4 video wallpaper spanning across stacked monitors on Wayland (wlr-layer-shell)"
license = "MIT"
repository = "https://github.com/imcmurray/spanpaper"
readme = "README.md"
keywords = ["wayland", "wallpaper", "video", "layer-shell", "mpv"]
categories = ["command-line-utilities"]
# Disable auto-discovery of binaries so both `spanpaper` and (feature-gated)
# `spanpaper-tray` come from explicit [[bin]] entries below.
autobins = false

[[bin]]
name = "spanpaper"
path = "src/main.rs"

# Tray applet — feature-gated so default `cargo build` doesn't pull
# ksni/tokio. See docs/tray-applet-plan.md for the full design.
[[bin]]
name              = "spanpaper-tray"
path              = "src/bin/spanpaper-tray/main.rs"
required-features = ["tray"]

[features]
default = []
tray    = ["dep:ksni", "dep:tokio", "dep:gtk4", "dep:async-channel", "dep:gtk4-layer-shell"]

[dependencies]
clap          = { version = "4.5", features = ["derive"] }
serde         = { version = "1",   features = ["derive"] }
toml          = "0.8"
dirs          = "5"
anyhow        = "1"
thiserror     = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-client    = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
nix           = { version = "0.27", features = ["signal", "process", "fs", "user"] }
shellexpand   = "3"
which         = "6"

# Tray-only deps.
ksni              = { version = "0.3", optional = true }
tokio             = { version = "1",   optional = true, features = ["rt", "macros", "time", "signal"] }
gtk4              = { version = "0.9", optional = true, features = ["v4_10"] }
async-channel     = { version = "2",   optional = true }
# Wraps gtk-layer-shell; lets the palette anchor itself near the tray
# icon via the wlr-layer-shell protocol the daemon already uses. Wlroots
# compositors only (Budgie wlroots, Sway, Hyprland, Wayfire, KDE on
# Wayland — i.e. every compositor spanpaper supports).
gtk4-layer-shell  = { version = "0.5", optional = true }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
opt-level     = 3
panic         = "abort"
